css improvements. make article image fixed size without stretching it

--- a/src/public/css/news-item.css
+++ b/src/public/css/news-item.css
@@ -8,6 +8,8 @@
 
 .news-item-image {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 .news-item-date {
